--- a/backend/package.json
+++ b/backend/package.json
@@ -7,8 +7,12 @@
     "dev": "ts-node-dev ./src/server.ts"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
+    "jimp": "^0.16.1",
     "mongoose": "^6.0.13",
     "uuid": "^8.3.2"
   },
