--- a/backend/package.json
+++ b/backend/package.json
@@ -12,11 +12,13 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
+    "express-validator": "^6.13.0",
     "jimp": "^0.16.1",
     "mongoose": "^6.0.13",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/node": "^16.11.9",
     "@types/typescript": "^2.0.0",
     "@types/uuid": "^8.3.3",
     "ts-node-dev": "^1.1.8",
